--- a/pages/serviços.html
+++ b/pages/serviços.html
@@ -82,14 +82,14 @@
                         <a class="nav-link" href="unidades.html">Unidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="parceiro.html">Trabalhe Conosco</a>
+                        <a class="nav-link" href="contato.html">Trabalhe Conosco</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contato">Entre em Contato</a>
+                        <a class="nav-link" href="contato.html">Entre em Contato</a>
                     </li>
                     <div class="ms-3">
-                        <a href="#cuidadores" class="btn btn-primary me-2">Cuidadores de idosos e enfermos</a>
-                        <a href="#franquia" class="btn btn-pink">Seja franqueado</a>
+                        <a href="contato.html" class="btn btn-primary me-2 mb-2">Cuidadores de idosos e enfermos</a>
+                        <a href="contato.html" class="btn btn-pink">Seja franqueado</a>
                     </div>
                 </ul>
             </div>
@@ -157,6 +157,110 @@
             </div>
         </div>
     </div>
+
+    <div class="container py-5">
+        <div class="row align-items-center mb-5">
+            <div class="col-md-6">
+                <h2 class="text-primary">PARA QUEM PRECISA DE ACOMPANHAMENTO DOMICILIAR PARA SI OU PARA SEUS FAMILIARES
+                </h2>
+                <p>Se precisa de um acompanhante para você ou para um membro de sua família, na você vai encontrar a
+                    pessoa certa. Temos um critério de seleção rigoroso, que valida a identidade, experiência e a
+                    qualidade do histórico dos cuidadores cadastrados na plataforma. Baixe nosso aplicativo.</p>
+                <a href="contato.html" class="btn btn-primary">Como funciona?</a>
+            </div>
+            <div class="col-md-6 text-center position-relative">
+                <img src="../src/assets/img/img09.jpg" class="img-fluid rounded" alt="Placeholder">
+            </div>
+        </div>
+        <div class="row align-items-center flex-md-row-reverse">
+            <div class="col-md-6">
+                <h2 class="text-primary">IDEAL PARA INSTITUIÇÕES QUE PRECISAM DE CUIDADORES COM QUALIFICAÇÃO
+                    PROFISSIONAL</h2>
+                <p>Temos Cuidadores, com formação para atuarem em áreas da saúde, sob a devida supervisão na sua
+                    instituição, para tanto basta se cadastrar!</p>
+                <a href="contato.html" class="btn btn-primary">Como contratar?</a>
+            </div>
+            <div class="col-md-6 text-center">
+                <img src="../src/assets/img/img05.jpg" class="img-fluid rounded" alt="Placeholder">
+            </div>
+        </div>
+    </div>
+
+    <!-- Serviços -->
+    <section id="servicos" class="bg-light py-5">
+        <div class="container">
+            <h2 class="text-center">Nossos Serviços</h2>
+            <div class="row text-center mt-4">
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-sm border-light">
+                        <div class="card-body">
+                            <i class="fas fa-procedures fa-3x text-primary"></i>
+                            <h4 class="card-title mt-3">Atendimento Domiciliar</h4>
+                            <p class="card-text">Cuidadores qualificados disponíveis para atendimento em casa, garantindo conforto e segurança.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-sm border-light">
+                        <div class="card-body">
+                            <i class="fas fa-stethoscope fa-3x text-primary"></i>
+                            <h4 class="card-title mt-3">Avaliação de Saúde</h4>
+                            <p class="card-text">Exames e avaliações regulares para monitorar a saúde e prevenir complicações.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-sm border-light">
+                        <div class="card-body">
+                            <i class="fas fa-comments fa-3x text-primary"></i>
+                            <h4 class="card-title mt-3">Aconselhamento Psicológico</h4>
+                            <p class="card-text">Suporte psicológico para ajudar a lidar com desafios emocionais e promover o bem-estar.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-sm border-light">
+                        <div class="card-body">
+                            <i class="fas fa-balance-scale fa-3x text-primary"></i>
+                            <h4 class="card-title mt-3">Orientação Nutricional</h4>
+                            <p class="card-text">Consultoria para uma alimentação saudável e adequada às necessidades de cada paciente.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-sm border-light">
+                        <div class="card-body">
+                            <i class="fas fa-user-md fa-3x text-primary"></i>
+                            <h4 class="card-title mt-3">Cuidados Pós-Hospitalares</h4>
+                            <p class="card-text">Acompanhamento especializado após alta hospitalar para uma recuperação segura.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card shadow-sm border-light">
+                        <div class="card-body">
+                            <i class="fas fa-ambulance fa-3x text-primary"></i>
+                            <h4 class="card-title mt-3">Transporte Seguro</h4>
+                            <p class="card-text">Serviço de transporte para consultas e exames, com acompanhamento profissional.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+        <!-- Rodapé -->
+        <footer class="bg-dark text-white text-center py-4">
+            <div class="container">
+                <p>&copy; 2025 Cuida Legal - Todos os direitos reservados</p>
+                <div class="d-flex justify-content-center gap-3">
+                    <a href="#" class="text-white"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="text-white"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
