--- a/pages/unidades.html
+++ b/pages/unidades.html
@@ -37,14 +37,14 @@
                         <a class="nav-link" href="unidades.html">Unidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="parceiro.html">Trabalhe Conosco</a>
+                        <a class="nav-link" href="contato.html">Trabalhe Conosco</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contato">Entre em Contato</a>
+                        <a class="nav-link" href="contato.html">Entre em Contato</a>
                     </li>
                     <div class="ms-3">
-                        <a href="#cuidadores" class="btn btn-primary me-2">Cuidadores de idosos e enfermos</a>
-                        <a href="#franquia" class="btn btn-pink">Seja franqueado</a>
+                        <a href="contato.html" class="btn btn-primary me-2 mb-2">Cuidadores de idosos e enfermos</a>
+                        <a href="contato.html" class="btn btn-pink">Seja franqueado</a>
                     </div>
                 </ul>
             </div>
