--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/assets/css/index.css">
 </head>
-
 <body>
 
     <!-- Navbar Inferior (Preenchida com as informações da navbar superior) -->
@@ -42,11 +41,11 @@
                         <a class="nav-link" href="#trabalhe">Trabalhe Conosco</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contato">Entre em Contato</a>
+                        <a class="nav-link" href="pages/contato.html">Entre em Contato</a>
                     </li>
                     <div class="ms-3">
-                        <a href="#cuidadores" class="btn btn-primary me-2">Cuidadores de idosos e enfermos</a>
-                        <a href="#franquia" class="btn btn-pink">Seja franqueado</a>
+                        <a href="pages/contato.html" class="btn btn-primary me-2 mb-2">Cuidadores de idosos e enfermos</a>
+                        <a href="pages/contato.html" class="btn btn-pink">Seja franqueado</a>
                     </div>
                 </ul>
             </div>
@@ -125,7 +124,7 @@
     <div class="container">
         <h1 class="display-4">Bem-vindo à Cuida Legal</h1>
         <p class="lead">Cuidamos de quem você ama com carinho e profissionalismo.</p>
-        <a href="#servicos" class="btn btn-light btn-lg">Conheça Nossos Serviços</a>
+        <a href="pages/serviços.html" class="btn btn-light btn-lg">Conheça Nossos Serviços</a>
     </div>
 </section>
 
@@ -149,9 +148,9 @@
                 <p>Se precisa de um acompanhante para você ou para um membro de sua família, na você vai encontrar a
                     pessoa certa. Temos um critério de seleção rigoroso, que valida a identidade, experiência e a
                     qualidade do histórico dos cuidadores cadastrados na plataforma. Baixe nosso aplicativo.</p>
-                <button class="btn btn-primary">Como funciona?</button>
+                <a href="pages/contato.html" class="btn btn-primary">Como funciona?</a>
             </div>
-            <div class="col-md-6 text-center position-relative">
+            <div class="col-md-6 text-center position-relative" style="padding-top: 25px;">
                 <img src="src/assets/img/cuidador.webp" class="img-fluid rounded" alt="Placeholder">
             </div>
         </div>
@@ -161,14 +160,23 @@
                     PROFISSIONAL</h2>
                 <p>Temos Cuidadores, com formação para atuarem em áreas da saúde, sob a devida supervisão na sua
                     instituição, para tanto basta se cadastrar!</p>
-                <button class="btn btn-primary">Como contratar?</button>
+                <a href="pages/contato.html" class="btn btn-primary">Como contratar?</a>
             </div>
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center" style="padding-top: 25px;">
                 <img src="src/assets/img/cuidador2.webp" class="img-fluid rounded" alt="Placeholder">
             </div>
         </div>
     </div>
 
+    <!-- Start of Selection -->
+ <div class="container">
+    <div class="embed-responsive" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+        <video class="embed-responsive-item" controls style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+            <source src="./src/assets/video/video01.mp4" type="video/mp4">
+        </video>
+    </div>
+    </div>
+    <br>
 
     <!-- Serviços -->
     <section id="servicos" class="bg-light py-5">
@@ -207,7 +215,6 @@
     </section>
 
 
-
     <!-- Whatsapp Icon -->
     <a href="https://wa.me/5513996619491" class="whatsapp-float" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
@@ -215,23 +222,22 @@
 
     <!-- Rodapé -->
     <footer class="bg-dark text-white text-center py-4">
-        <div class="container-fluid">
+        <div class="container">
             <p>&copy; 2025 Cuida Legal - Todos os direitos reservados</p>
-            <div class="social-icons">
-                <a href="https://facebook.com" class="social-icon" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://twitter.com" class="social-icon" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://linkedin.com" class="social-icon" target="_blank"><i
-                        class="fab fa-linkedin-in"></i></a>
-                <a href="https://instagram.com" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+            <div class="social-icons mb-3">
+                <a href="https://facebook.com" class="social-icon" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://twitter.com" class="social-icon" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://linkedin.com" class="social-icon" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://instagram.com" class="social-icon" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </footer>
 
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+<script src="script.js"></script>
+</body>
 </body>
 
 </html>
