--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="src/assets/css/index.css">
+    <link rel="stylesheet" href="src/assets/css/aos.css">
 </head>
 <body>
 
@@ -129,7 +130,7 @@
 </section>
 
     <!-- Quem Somos -->
-    <section id="sobre" class="container py-5">
+    <section id="sobre" class="container py-5" data-aos="fade-top">
         <h2 class="text-center">Quem Somos</h2>
         <p>Somos seu parceiro dedicado no cuidado e bem-estar de entes queridos. Somos uma equipe comprometida de
             profissionais apaixonados pelo que fazemos, oferecendo serviços de cuidado de alta qualidade para aqueles
@@ -151,7 +152,7 @@
                 <a href="pages/contato.html" class="btn btn-primary">Como funciona?</a>
             </div>
             <div class="col-md-6 text-center position-relative" style="padding-top: 25px;">
-                <img src="src/assets/img/cuidador.webp" class="img-fluid rounded" alt="Placeholder">
+                <img src="src/assets/img/cuidador.webp" class="img-fluid rounded" alt="Placeholder" data-aos="fade-left">
             </div>
         </div>
         <div class="row align-items-center flex-md-row-reverse">
@@ -163,7 +164,7 @@
                 <a href="pages/contato.html" class="btn btn-primary">Como contratar?</a>
             </div>
             <div class="col-md-6 text-center" style="padding-top: 25px;">
-                <img src="src/assets/img/cuidador2.webp" class="img-fluid rounded" alt="Placeholder">
+                <img src="src/assets/img/cuidador2.webp" class="img-fluid rounded" alt="Placeholder" data-aos="fade-right">
             </div>
         </div>
     </div>
@@ -171,7 +172,7 @@
     <!-- Start of Selection -->
  <div class="container">
     <div class="embed-responsive" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-        <video class="embed-responsive-item" controls style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
+        <video class="embed-responsive-item" controls style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" data-aos="fade-top">
             <source src="./src/assets/video/video01.mp4" type="video/mp4">
         </video>
     </div>
@@ -225,19 +226,42 @@
         <div class="container">
             <p>&copy; 2025 Cuida Legal - Todos os direitos reservados</p>
             <div class="social-icons mb-3">
-                <a href="https://facebook.com" class="social-icon" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://twitter.com" class="social-icon" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="https://linkedin.com" class="social-icon" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://instagram.com" class="social-icon" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://facebook.com" class="social-icon" target="_blank" aria-label="Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://twitter.com" class="social-icon" target="_blank" aria-label="Twitter">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://linkedin.com" class="social-icon" target="_blank" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="https://instagram.com" class="social-icon" target="_blank" aria-label="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-<script src="script.js"></script>
-</body>
-</body>
-
-</html>
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+    <script src="src/assets/js/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 2000,
+        });
+    </script>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <!-- Eduardo Dos Santos Ferreira -->
+    </body>
+    </html>
